# InterviewLens

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.dev.yml  docker-compose.worker.yml  docker-compose.yml  nc_spider.py  pyproject.toml
data/: seed_aliases.yaml
docs/: ARCHITECTURE.md  COMMANDS.md  CRAWLER_EVOLUTION.md  DAY10_API.md  DAY11_FRONTEND.md  DAY12_POLISH.md  DAY13_INGESTION_TUNING.md  DAY14_RESUME_AND_RELEASE.md  DAY1_BOOTSTRAP.md  DAY2_CRAWLER.md  DAY3_EXTRACTOR.md  DAY4_LANGGRAPH.md  DAY5_OBSERVABILITY.md  DAY6_NORMALIZER.md  DAY7_SCORER.md  DAY8_AGGREGATOR.md  DAY9_CELERY.md  EMBEDDING_MODEL.md  LLM_EXTRACTION_RELIABILITY.md  PROMPT_LIBRARY.md  ROADMAP.md
docs/superpowers/plans/: 2026-06-18-ai-answer.md
scripts/: batch-discover.ps1  crawl-one.ps1  cron-daily.ps1  rebuild.ps1  reset-full.ps1  reset.ps1  setup-scheduler.ps1  setup-utf8.ps1  start.ps1
sql/: 001_init.sql  002_answer_ai.sql  export_llm_data.sql
src/interviewlens/: __init__.py  cli.py  config.py  errors.py  logging.py  observability.py  seed_demo.py
tests/: test_aggregator_cluster.py  test_answerer.py  test_answerer_prompt.py  test_api.py  test_bridge.py  test_cache_key.py  test_cleaner.py  test_cookie.py  test_discover.py  test_embedding.py  test_exception_handling.py  test_graph_routing.py  test_metrics.py  test_resolver_exceptions.py  test_schema.py  test_scorer.py  test_search_cache.py  test_smoke.py  test_taxonomy_summary_cache.py
web/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
(+100 files in other folders)
